FRMAP-1815 Scrollbar issue fix (#684)

--- a/src/pages/messages/scss/_messages.scss
+++ b/src/pages/messages/scss/_messages.scss
@@ -664,7 +664,8 @@
 		}
 		.campaigns-main {
 			flex-grow: 1;
-			overflow-y: auto;
+			// overflow-y: auto;
+			overflow: hidden;
 
 			.campaigns-listing {
 				margin: 30px;
